# artoolkitplus

./: AUTHORS  CMakeLists.txt  INSTALL  README  README.md  SConstruct
debian/: changelog  control  copyright  rules
doc/: artoolkitplus.doxy  publications.txt
doc/html/: annotated.html  class_a_r_tool_kit_plus_1_1_camera-members.html  class_a_r_tool_kit_plus_1_1_camera.html  class_a_r_tool_kit_plus_1_1_logger-members.html  class_a_r_tool_kit_plus_1_1_logger.html  class_a_r_tool_kit_plus_1_1_memory_manager-members.html  class_a_r_tool_kit_plus_1_1_memory_manager.html  class_a_r_tool_kit_plus_1_1_tracker-members.html  class_a_r_tool_kit_plus_1_1_tracker.html  class_a_r_tool_kit_plus_1_1_tracker_multi_marker-members.html  class_a_r_tool_kit_plus_1_1_tracker_multi_marker.html  class_a_r_tool_kit_plus_1_1_tracker_single_marker-members.html  class_a_r_tool_kit_plus_1_1_tracker_single_marker.html  classes.html  dir_293b7d200a7758742a625c79fe4f67f4.html  dir_29f3e114c3d61e5a508c73c431a41ab5.html  dir_7224bcc2fd94150317013492bcb7aa0d.html  dir_ea75fcb0139a2bd71c691b9c2c4256f5.html  dir_f14eb1bcc9f0540a2b144f832664e515.html  dir_f1e3d35e2f94a9623b8a9448778ff269.html  dirs.html  functions.html  functions_func.html  hierarchy.html  index.html  namespace_a_r_tool_kit_plus.html  namespacerpp.html  namespaces.html
id-markers/: README
include/ARToolKitPlus/: ARToolKitPlus.h  Camera.h  CameraAdvImpl.h  CameraFactory.h  CameraImpl.h  Tracker.h  TrackerImpl.h  TrackerMultiMarker.h  TrackerMultiMarkerImpl.h  TrackerSingleMarker.h  TrackerSingleMarkerImpl.h  ar.h  arBitFieldPattern.h  arGetInitRot2Sub.h  arMulti.h  config.h  matrix.h  param.h  vector.h
include/ARToolKitPlus/extra/: BCH.h  GPP.h  Hull.h  rpp.h
include/ARToolKitPlus_impl/: TrackerImpl.cpp  TrackerMultiMarkerImpl.cpp  TrackerSingleMarkerImpl.cpp  arGetInitRot2.cpp
include/ARToolKitPlus_impl/core/: arBitFieldPattern.cpp  arDetectMarker.cpp  arDetectMarker2.cpp  arGetCode.cpp  arGetMarkerInfo.cpp  arGetTransMat.cpp  arGetTransMat2.cpp  arGetTransMat3.cpp  arGetTransMatCont.cpp  arLabeling.cpp  arLabelingImpl.h  arMultiActivate.cpp  arMultiGetTransMat.cpp  arMultiGetTransMatHull.cpp  arMultiReadConfigFile.cpp  arUtil.cpp  mPCA.cpp  matrix.cpp  paramDecomp.cpp  paramDistortion.cpp  rppGetTransMat.cpp  rppMultiGetTransMat.cpp  vector.cpp
lib/: SConscript  libARToolKitPlus.so.2  libARToolKitPlus.so.2.0.2
sample/data/: PGR_M12x0.5_2.5mm.cal
sample/multi/: main.cpp
sample/multi/src/: main.cpp
sample/simple/: main.cpp
sample/simple/src/: main.cpp
src/: Camera.cpp  CameraAdvImpl.cpp  CameraFactory.cpp  CameraImpl.cpp  Tracker.cpp  TrackerImpl.cpp  TrackerImpl.cxx  TrackerMultiMarker.cpp  TrackerMultiMarkerImpl.cpp  TrackerSingleMarker.cpp  TrackerSingleMarkerImpl.cpp  src.pro
src/core/: arBitFieldPattern.cpp  arDetectMarker.cpp  arDetectMarker.cxx  arDetectMarker2.cpp  arGetCode.cpp  arGetInitRot2.cpp  arGetMarkerInfo.cpp  arGetTransMat.cpp  arGetTransMat2.cpp  arGetTransMat3.cpp  arGetTransMatCont.cpp  arLabeling.cpp  arLabelingImpl.h  arMultiActivate.cpp  arMultiGetTransMat.cpp  arMultiGetTransMatHull.cpp  arMultiReadConfigFile.cpp  arUtil.cpp  byteSwap.cpp  byteSwap.cxx  mPCA.cpp  matrix.cpp  paramDecomp.cpp  paramDistortion.cpp  rppGetTransMat.cpp  rppMultiGetTransMat.cpp  vector.cpp
src/extra/: BCH.cpp  FixedPoint.cpp  FixedPoint.h  Hull.cpp
src/librpp/: arGetInitRot2Sub.cpp  librpp.cpp  librpp.h  rpp.cpp  rpp.h  rpp_const.h  rpp_quintic.cpp  rpp_svd.cpp  rpp_types.h  rpp_vecmat.cpp  rpp_vecmat.h
src/math/: artkpFixedBase_generic.h  artkpFixedBase_gpp.h  artkpFloat_fixed.h  artkpFloat_float.h
tools/CameraCalib/: arFileGrabber.cpp  calib_dist.cpp  calib_inp.cpp  main.cpp
tools/IdPatGen/: main.cpp
tools/IdPatGen/PN/: ImageTool.cpp
tools/ppm2patt/: main.cpp
tools/test/: main.cpp
(+2 files in other folders)
